<resources>
    <string name="app_name">CyberGarden</string>
    <string name="news">Новости</string>
    <string name="tests">Тесты</string>
    <string name="statistic">Статстика</string>
    <string name="events">Мероприятия</string>
    <string name="faq">FAQ</string>
    <string name="enrollee">Абитуриенту</string>
    <string name="in_direction_of_training">Направление подготовки</string>
    <string name="choose_your_direction">Выберите свое направление</string>
    <string name="career_guidance">Профориентация</string>
    <string name="career_guidance_test">Тест на профориентацию: "Кем быть?"</string>
    <string name="ranked_lists">Ранжированные списки</string>
    <string name="ranked_lists_description">Следите за соей позицией</string>
    <string name="questions">Часто задаваемые вопросы</string>
    <string name="questions_description">Найдите ответ на свой вопрос здесь</string>
    <string name="email">Обратная связь</string>
    <string name="email_description">Свяжитесь с нами</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="user_name">Имя пользователя</string>
    <string name="fio">ФИО</string>
    <string name="mobile_phone">Телефон</string>
    <string name="snils">СНИЛС</string>
    <string name="password">Пароль</string>
    <string name="enter_button">Войти</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="log_in_no_account">Еще не аккаунта? Зарегиструйтесь</string>
    <string name="authorisation_alert">Я ознакомлен и согласен с правилами обработки персональных данных</string>
    <string name="error_login">Пользователь не существует</string>
    <string name="error_list">Не удалось загрузить список</string>
    <string name="choose_direction">Подобрать направление</string>
    <string name="choose_intresting">Что вам интересно?</string>
    <string name="math">Математика</string>
    <string name="russian">Русский</string>
    <string name="fith">Физика</string>
    <string name="inform">Информатика</string>
    <string name="other">Другое</string>
    <string name="choose_studies">С какими экзаменами будете поступать?</string>
    <string name="choose_form">Выберете форму обучения?</string>
    <string name="budget">Бакалавриат</string>
    <string name="commercial">Специалитет</string>
    <string name="search">Поиск по мероприятиям</string>
    <string name="summ">Сумма баллов?</string>
    <string name="summa">Сумма</string>
    <string name="filter">Фильтр</string>
    <string name="percent">Вероятность поступления</string>
    <string name="your_email">Укажите email для обратной связи</string>
    <string name="your_message">Ваше обращение</string>
    <string name="send">Отправить</string>
    <string name="success_message">Сообщение успешно отправлено</string>
    <string name="error_message">Заполните поля</string>
</resources>